--- a/style.css
+++ b/style.css
@@ -95,25 +95,25 @@ h4, .h4{
 .headerContent{
 	color:#202020;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	font-size:34px;
+	font-size:8px;
 	font-weight:bold;
 	line-height:100%;
 	padding:0;
 	text-align:center;
-	vertical-align:middle;
 }
 
 #headerImage{
 	height:auto;
 	max-width:560px;
 	width:560px;
+	display: block;
 }
 
 .bodyContent {
 	background-color:#d8d8d8;
 }
 
-.bodyContent div{
+.bodyContent div, .bodyContent div td {
 	color:#282828;
 	font-family:Georgia, Times, "Times New Roman", serif;
 	font-size:14px;
